--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <title>App de Finanças</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
